--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -45,6 +45,13 @@
         <div class="col-md-8 col-lg-6">
             <div class="card shadow-0 border" style="background-color: #f0f2f5;">
                 <div class="card-body p-4">
+                    {% if messages %}
+                      {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }}">
+                          {{ message }}
+                        </div>
+                      {% endfor %}
+                    {% endif %}
                     {% block content %}{% endblock %}
                 </div>
             </div>
