--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,15 +1,24 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    {% for post in posts %}
+    {% for snippet in snippets %}
     <article class="media content-section">
+        <img class="rounded-circle article-img" src="{{ snippet.author.profile.image.url }}" 
+        width="100" 
+        height="100" />
         <div class="media-body">
             <div class="article-metadata">
-                <a class="mr-2" href="#">{{ post.author }}</a>
-                <small class="text-muted">{{ post.date_posted |date:"F d, Y" }}</small>
+                <a class="mr-2" href="#">{{ snippet.author }}</a>
+                <small class="text-muted">{{ snippet.date_generated |date:"F d, Y" }}</small>
             </div>
-            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
+            <h2><a class="article-title" href="#">{{ snippet.topic }}</a></h2>
+            <p class="article-content" style="font-family:verdana;">{{ snippet.branding_content }}</p>
         </div>
+    </article>
+    {% endfor %}
+    {% for snippet in snippets %}
+    <article class="media content-section" style="border-radius: 50px;
+    background: #83bfd7; width: 90px; font-family:'Courier New'">
+        <li>{{ snippet.keywords }}</li>
     </article>
     {% endfor %}
 {% endblock content %}
