--- a/blog/templates/blog/static/blog/main.css
+++ b/blog/templates/blog/static/blog/main.css
@@ -48,6 +48,7 @@ a.article-title:hover {
   
 .article-content {
     white-space: pre-line;
+    border:#cf7979;
 }
   
 .article-img {
@@ -83,3 +84,4 @@ a.article-title:hover {
 .account-heading {
     font-size: 2.5rem;
 }
+
