--- a/branding/templates/branding/about.html
+++ b/branding/templates/branding/about.html
@@ -1,4 +1,8 @@
 {% extends "branding/base.html" %}
 {% block content %}
-    <h1>About Page</h1>
+<div class="about-section">
+  <h1>About Us Page</h1>
+  <p>Some text about who we are and what we do.</p>
+</div>
 {% endblock content %}
+
