--- a/branding/templates/branding/base.html
+++ b/branding/templates/branding/base.html
@@ -5,7 +5,7 @@
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=2, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -22,7 +22,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-info">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{% url 'branding-home' %}">Django Branding</a>
+          <a class="navbar-brand mr-4" href="{% url 'branding-home' %}">Catchie</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -34,6 +34,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'branding-create' %}">New Branding</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
@@ -45,11 +46,10 @@
         </div>
       </nav>
     </header>
-    <main role="main" class="container p-3 my-3 border">
-      <div class="row mt-3">
-        <div class="col-md-8 col-lg-6">
-            <div class="card shadow-0 border" style="background-color: #f0f2f5;">
-                <div class="card-body p-4">
+    <main role="main" class="container p-3 my-3 border" style="max-width: 80rem;">
+            <div class="card-group shadow-0 border" style="background-color: #1654b1;">
+                <div class="card">
+                  <div class="card-body">
                     {% if messages %}
                       {% for message in messages %}
                         <div class="alert alert-{{ message.tags }}">
@@ -58,23 +58,8 @@
                       {% endfor %}
                     {% endif %}
                     {% block content %}{% endblock %}
-                </div>
-            </div>
-        </div>
-        <div class="col-md-8 col-lg-6">
-          <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-              </ul>
-            </p>
-          </div>
-        </div>
-      </div>
+                  </div>
+                </div>        
     </main>
 
     <!-- Optional JavaScript -->
