--- a/branding/templates/branding/static/branding/main.css
+++ b/branding/templates/branding/static/branding/main.css
@@ -3,9 +3,18 @@ main {
     padding: 5px;
     background-color: lightgray;
 }
-body {
+/* body {
     background: #fafafa;
     color: #333333;
+} */
+h1{
+    color: turquoise;
+}
+body{
+    background-color: black;
+    font-family: sans-serif;
+    text-align: center;
+    padding-top: 40vh;
 }
   
 h1, h2, h3, h4, h5, h6 {
@@ -25,12 +34,12 @@ h1, h2, h3, h4, h5, h6 {
 }
   
 .site-header .navbar-nav .nav-link.active {
-    font-weight: 500;
+    font-weight: 300;
 }
   
 .content-section {
     background: #ffffff;
-    padding: 10px 20px;
+    padding: 20px 20px;
     border: 3px solid #100c0c;
     border-radius: 3px;
     margin-top: 0.25m;
@@ -69,7 +78,7 @@ a.article-title:hover {
 }
   
 .article-svg {
-    width: 25px;
+    width: 50px;
     height: 25px;
     vertical-align: middle;
 }
@@ -85,3 +94,66 @@ a.article-title:hover {
     font-size: 2.5rem;
 }
 
+html {
+    box-sizing: border-box;
+  }
+  
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 8px;
+  }
+  
+  .about-section {
+    padding: 50px;
+    text-align: center;
+    background-color: #474e5d;
+    color: white;
+  }
+  
+  .container {
+    padding: 0 16px;
+  }
+  
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .title {
+    color: grey;
+  }
+  
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .button:hover {
+    background-color: #555;
+  }
+  
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
