--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -14,7 +14,7 @@
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign Up Now</a>
+            Already Have An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
         </small>
     </div>
 </div>
